cabal-version:       2.2

name:                Lafont
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Scott Wesley
maintainer:          ar627383@dal.ca
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

-----------------------------------------------------------------------------------------
-- Main library.

library
  exposed-modules:     Lafont.Common
                       Lafont.Either
                       Lafont.Graph
                       Lafont.Internal.Graph
                       Lafont.Maybe
                       Lafont.Named
                       Lafont.Ring
                       Lafont.String
                       Lafont.Edit.EIRules
                       Lafont.Edit.Internal.EIRules
                       Lafont.Edit.Invert
                       Lafont.Generators.Algebraic.Internal.ModP
                       Lafont.Generators.Algebraic.Internal.Product
                       Lafont.Generators.Algebraic.ModP
                       Lafont.Generators.Algebraic.Product
                       Lafont.Generators.Categories
                       Lafont.Generators.Display
                       Lafont.Generators.QubitGates
                       Lafont.Generators.RuleSem
                       Lafont.Generators.Semantics
                       Lafont.Parse.Common
                       Lafont.Parse.DelimLists
                       Lafont.Parse.DerivationFile
                       Lafont.Parse.GeneratorFile
                       Lafont.Parse.Internal.DerivationFile
                       Lafont.Parse.Internal.GeneratorFile
                       Lafont.Parse.Internal.Properties
                       Lafont.Parse.Internal.RelationFile
                       Lafont.Parse.Internal.Semantics
                       Lafont.Parse.MonWords
                       Lafont.Parse.Properties
                       Lafont.Parse.RelationFile
                       Lafont.Parse.Semantics
                       Lafont.Rewrite.Abstraction
                       Lafont.Rewrite.Common
                       Lafont.Rewrite.Derivations
                       Lafont.Rewrite.Internal.Abstraction
                       Lafont.Rewrite.Internal.Derivations
                       Lafont.Rewrite.Internal.Rules
                       Lafont.Rewrite.Internal.Summary
                       Lafont.Rewrite.Lookup
                       Lafont.Rewrite.Rules
                       Lafont.Rewrite.Simplification
                       Lafont.Rewrite.Summary
  build-depends:       base,    
                       containers,
                       directory,
                       newsynth,
                       split
  hs-source-dirs:      src/Lafont
  default-language:    Haskell2010

-----------------------------------------------------------------------------------------
-- Executable library and executables.

library LafontExe
  exposed-modules:     LafontExe.CheckGenerators
                       LafontExe.CheckRelations
                       LafontExe.ValidateDerivations
                       LafontExe.IO.CmdLnFlags
                       LafontExe.IO.CmdLnParser
                       LafontExe.IO.Configs
                       LafontExe.IO.Files
                       LafontExe.Logic.Relations
                       LafontExe.Logging.ErrorFormat
                       LafontExe.Logging.LineBased
                       LafontExe.Logging.Primitive
  build-depends:       base,
                       cmdargs,
                       directory,
                       yaml,
                       Lafont
  hs-source-dirs:      src/LafontExe
  default-language:    Haskell2010

common exe-with-file-io-props
  hs-source-dirs:      exe
  default-language:    Haskell2010
  build-depends:       base, 
                       directory,
                       Lafont,
                       LafontExe

executable check_generators
  import:              exe-with-file-io-props
  main-is:             CheckGenerators/Main.hs
  other-modules:       CheckGenerators.CmdLn

executable check_relations
  import:              exe-with-file-io-props
  main-is:             CheckRelations/Main.hs
  other-modules:       CheckRelations.CmdLn

executable validate_derivations
  import:              exe-with-file-io-props
  main-is:             ValidateDerivations/Main.hs
  other-modules:       ValidateDerivations.CmdLn

executable yaml_test
  import:              exe-with-file-io-props
  main-is:             YamlTest/Main.hs
  other-modules:       YamlTest.CmdLn

-----------------------------------------------------------------------------------------
-- Unit tests.

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       Lafont

common io-unit-test-props
  import:              basic-unit-test-props
  build-depends:       LafontExe

test-suite lafont-common-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-edit-dualize-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Edit-Invert-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-edit-eirules-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Edit-EIRules-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-either-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Either-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-maybe-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Maybe-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-named-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Named-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-ring-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Ring-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-string-tests
  import:              basic-unit-test-props
  main-is:             Lafont-String-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-graph-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Graph-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-abstraction-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Abstraction-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-rules-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Rules-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-simplification-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Simplification-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-summary-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Summary-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-lookup-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Lookup-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-derivations-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Derivations-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-algebraic-modp-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Algebraic-ModP-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-algebraic-product-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Algebraic-Product-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-categories-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Categories-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-generators-display-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Display-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-generators-rulesem-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-RuleSem-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-semantics-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Semantics-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-qubitgates-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-QubitGates-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-parse-common-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-delimlists-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-DelimLists-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-monwords-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-MonWords-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-properties-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Properties-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-generatorfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-GeneratorFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-relationfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-RelationFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-derivationfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-DerivationFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-semantics-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Semantics-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafontexe-logging-linebasedlogging-tests
  import:              io-unit-test-props
  main-is:             LafontExe-Logging-LineBased-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafontexe-logging-primitivelogging-tests
  import:              io-unit-test-props
  main-is:             LafontExe-Logging-Primitive-Tests.hs
  type:                exitcode-stdio-1.0

-----------------------------------------------------------------------------------------
-- Executable test library and tests.

library LafontExeTest
  exposed-modules:     LafontExeTest.HandleTest
  build-depends:       base,
                       directory
  hs-source-dirs:      src/LafontExeTest
  default-language:    Haskell2010

common exe-test-props
  hs-source-dirs:      test/exe
  default-language:    Haskell2010
  build-depends:       base,
                       Lafont,
                       LafontExe,
                       LafontExeTest

test-suite checkgenerators-tests
  import:              exe-test-props
  main-is:             CheckGenerators-Tests.hs
  type:                exitcode-stdio-1.0

test-suite checkrelations-tests
  import:              exe-test-props
  main-is:             CheckRelations-Tests.hs
  type:                exitcode-stdio-1.0

test-suite validatederivations-tests
  import:              exe-test-props
  main-is:             ValidateDerivations-Tests.hs
  type:                exitcode-stdio-1.0
